# Crop-Yeild-Prediction

./: .gitignore  README.md  app.py  compose.yml  pyproject.toml
ML_pipeline/src/: EDA.ipynb  feature_engineering.py  main.py  model.py  preprocessing.py
ML_pipeline/src/.ipynb_checkpoints/: EDA-checkpoint.ipynb
backend/: Dockerfile  app.py  pyproject.toml
backend/ML_pipeline/scripts/: main.py  preprocessing.py
backend/ML_pipeline/scripts/.ipynb_checkpoints/: EDA-checkpoint.py
backend/ML_pipeline/scripts/.virtual_documents/: EDA.ipynb
backend/ML_pipeline/src/: feature_engineering.py  model.py
backend/model/: encoder.pkl  prediction.py
backend/validation/: user_input.py
frontend/: Dockerfile  frontend.py  pyproject.toml
model/: prediction.py
src/: EDA.ipynb  data_loader.py  feature_engineering.py  main.py  model.py  preprocessing.py
src/.ipynb_checkpoints/: EDA-checkpoint.ipynb
